2022-10-20
    Updated docs to v0.71
2022-10-19
    New gd subdirectory with examples to render svg files using the GD library
    and libmgrx. A bit incomplete but it works
2022-10-18
    Added svg2png.c program to MGRX test programs
2022-10-20
    Hack to MGRX for drawing path elements with subpaths, check if every polygon
    is inside the last polygon and use the background color, so glyphs like "ià"
    can be rendered.
2022-08-01
    Updated docs to v0.70
2022-07-10
    New functions:
      void MsvgGetInheritedFontFamily(const MsvgElement *el, int *ifont_family,
                                      char **sfont_family);
    Added bfontlib funcionality with new functions:
      int MsvgBFontLibLoad(MsvgElement *el);
      int MsvgBFontLibLoadFromFile(char *fname);
      MsvgBFont *MsvgBFontLibFind(char *sfont_family, int ifont_family);
      void MsvgBFontLibFree(void);
      MsvgElement *MsvgTextToPathGroupUsingBFontLib(MsvgElement *el);
      int MsvgBFontLibGetNumOfFonts(void);
      MsvgBFont *MsvgBFontLibGetBFontByNumber(int nfont);
      void MsvgBFontLibSetDefaultBfont(int nfont);
    Changed test/tfont.c and mgrx/showsvg.c to use the fontlib functions.
2022-07-06
    Moved MsvgProcPaintCtxInheritance(MsvgPaintCtx and
    MsvgProcPaintCtxDefaults from sec/serializ.c to src/paintctx.c
    New functions:
      double MsvgGetCharAdvx(long unicode, double font_size, MsvgBFont *bfont);
      double MsvgGetStrAdvx(char *text, double font_size, MsvgBFont *bfont);
      int MsvgGetInheritedTextAnchor(const MsvgElement *el);
      double MsvgGetInheritedFontSize(const MsvgElement *el);
    MsvgTextToPathGroup now have inheritance in account for font_size and
    text_anchor.
2022-07-04
    Changes to the MGRX tests:
    reworked rendmgrx.c to use transformation for rotating, pan and zooming.
2022-07-02
    Updated docs to v0.60
2022-07-02
    Added gfont subdir with three svg fonts, derived from Free GNU fonts.