@@ -51,7 +51,7 @@ static void sufn(MsvgElement *el, MsvgPaintCtx *pctx, void *udata)
 
     ud = (UserData *)udata;
     
-    newel = MsvgTransformCookedElement(el, pctx);
+    newel = MsvgTransformCookedElement(el, pctx, 0);
     if (newel == NULL) return;
 
     switch (newel->eid) {
